tests/e2e/explicit_cast_invalid2.error
Error: syntax error in story at line 1, column None

1|    List[time] t = {}
      ^^^^^^^^^^^^^^^^^

E0126: Type casting not supported from `Map[any,any]` to `List[time]`.
